<resources>
    <string name="title_activity_maps">Map</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>

    <!-- Manifest.xml string settings -->
    <string name="app_name">Murah</string>
    <string name="title_activity_fragment_map">Map</string>

    <!-- Unused strings, will be used for settingactivity.class
    TODO change placeholder text -->
    <string name="user_name">user_name</string>
    <string name="no_name">no_name</string>
    <string name="user_gender">user_gender</string>

    <!-- Java: MainActivity.class -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Layout: nav_header_main.xml -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Layout: activity_settings.xml -->
    <string name="radioGroupHint">Radio Hint</string>
    <string name="image_content">Setting Image</string>

    <!-- Layout: discover_fragment.xml -->

    <!-- Layout: item_fragment.xml-->
    <string name="locationName">Location Name</string>
    <string name="itemName">Item Name</string>
    <string name="itemCategory">Item Category</string>
    <string name="itemPrice">Item Price</string>
    <string name="itemImage">Item Image</string>
    <string name="uploadImage">Upload Image</string>

    <!-- Menu: main.xml -->
    <string name="action_logout">Log Out</string>
    <string name="action_login">Log In</string>
    <string name="action_settings">Settings</string>

    <!-- Menu: activity_main_drawer -->
    <string name="nav_shop_list">Shopping List</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_history">History</string>
    <string name="nav_aboutUs">About Us</string>

    <!-- Menu: activity_main_bar.xml -->
    <string name="nav_bar_discover">Discover</string>
    <string name="nav_bar_area">Area</string>
    <string name="nav_bar_addItem">Add Item</string>
    <string name="frozen">Frozen</string>
    <string name="dairy">Dairy</string>
    <string name="canned">Canned</string>
    <string name="grain">Grain</string>
    <string name="dry">Dry</string>
    <string name="fresh">Fresh</string>

</resources>
