<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_drawer">

    <!-- find in MapsActivity.java > loadBottomNavigationView()-->
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_shop_list"
            android:title="@string/nav_shop_list" />
        <item android:id="@+id/nav_notification"
            android:title="@string/nav_notification" />
        <item android:id="@+id/nav_history"
            android:title="@string/nav_history" />
    </group>

    <item android:title="General">
        <menu>
            <item
                android:id="@+id/action_log"
                android:title="@string/action_login" />
            <item android:id="@+id/action_settings"
                android:title="@string/action_settings" />
            <item android:id="@+id/nav_aboutUs"
                android:title="@string/nav_aboutUs" />
        </menu>
    </item>

</menu>