<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    tools:context=".DiscoverFragment">

     add recyclerview and dynamic image buttons
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/frozenBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="@string/frozen"

                    android:src="@drawable/frozen"
                    />

                <ImageButton
                    android:id="@+id/dairyBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/dairy"
                    android:src="@drawable/ic_ac_unit_black_24dp"/>

                <ImageButton
                    android:id="@+id/grainBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/grain"
                    android:src="@drawable/ic_ac_unit_black_24dp"/>

                <ImageButton
                    android:id="@+id/cannedBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/canned" />
                    android:text="@string/frozen" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/frozen" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/frozen" />
        </LinearLayout>
    </HorizontalScrollView>

        <!-- dynamically add image button and text -->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_view_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>