<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    tools:context=".DiscoverFragment">

    <!-- List all products -->
    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="261dp"
        android:layout_height="53dp">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="26dip"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="12dp"
            android:text="@string/itemName"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/itemPrice"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/itemName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationName"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:text="@string/locationName"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/itemPrice"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/darkGrey" />


</LinearLayout>